# cupdater

./: .gitignore  LICENSE.md  README.md  cli.py  pyinstaller.py  pyproject.toml
cupdater/: __init__.py  __main__.py  main.py  pyinstaller.py
cupdater/backend/: __init__.py  backend.py  filedb.py  manifest.py  remotezip.py
cupdater/frontend/: __init__.py  frontend.py  gui.py  tui.py
